--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "jest": "^28.1.1",
     "vue": "^3.2.36",
     "vuex": "^4.0.2"
   },
