--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "cryptocurrency",
   "version": "0.0.0",
   "scripts": {
-    "test" : "jest",
     "build": "vite build",
     "test:unit": "vue-cli-service test:unit",
     "dev": "vite",
@@ -13,19 +12,13 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/preset-env": "^7.18.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/test-utils": "^2.0.0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "autoprefixer": "^10.4.7",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^27.5.1",
-    "jest": "^27.0.5",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
-    "vite": "^2.9.9",
-    "vue-jest": "^3.0.7"
+    "vite": "^2.9.9"
   }
 }
